--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -601,7 +601,7 @@
   "dn16:3.27.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, male, lepe ili ružne. I zaključuje ovako:",
   "dn16:3.27.2": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.27.3": "To je treći način.",
-  "dn16:3.28.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, ogromne, lepe ili ružne. I zaključuje ovako:",
+  "dn16:3.28.1": "Kad neko ne opažajući oblike u sebi, vidi spoljašnje oblike, ogromne, lepe ili ružne.",
   "dn16:3.28.2": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.28.3": "To je četvrti oblik majstorstva.",
   "dn16:3.29.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, plave, plave boje, plave spoljašnjosti, plavog sjaja.",
