--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1193,5 +1193,6 @@
   "an-blurbs:an10.218": "O Buda resume e explica diferentes tipos de corrupção e fracasso em termos da conduta corporal, verbal e mental, que resultam em sofrimento. Ele também lista diferentes tipos perfeição e sucesso  em termos da conduta corporal, verbal e mental, que resultam em felicidade.",
   "an-blurbs:an10.219": "A prática da libertação do coração baseada no bem-querer, na alegria altruísta, na compaixão e na  equanimidade resultam no não-retorno.",
   "an-blurbs:an10.220": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais.",
-  "an-blurbs:an11.1": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais."
+  "an-blurbs:an11.1": "Dez qualidades relativas aos preceitos que destinam um indivíduo para o inferno ou para os reinos celestiais.",
+  "an-blurbs:an11.2": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. "
 }
