--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1197,5 +1197,6 @@
   "an-blurbs:an11.2": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
   "an-blurbs:an11.3": "Onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
   "an-blurbs:an11.4": "O Venerável Sāriputta ensina sobre os onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
-  "an-blurbs:an11.5": "O Venerável Ānanda ensina sobre os onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. "
+  "an-blurbs:an11.5": "O Venerável Ānanda ensina sobre os onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
+  "an-blurbs:an11.6": "Onze resultados negativos a serem esperados por um bhikkhu que ofende e insulta seus companheiros espirituais. "
 }
