--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1199,5 +1199,6 @@
   "an-blurbs:an11.4": "O Venerável Sāriputta ensina sobre os onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
   "an-blurbs:an11.5": "O Venerável Ānanda ensina sobre os onze elos de causação natural e impessoal, baseados na conduta ética, que resultam no conhecimento e visão da libertação espiritual. ",
   "an-blurbs:an11.6": "Onze resultados negativos a serem esperados por um bhikkhu que ofende e insulta seus companheiros espirituais. ",
-  "an-blurbs:an11.7": "O venerável Ānanda questiona o Buda sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. Ambos o Buda e o venerável Sāriputta confirmam a existência de tal estado meditativo."
+  "an-blurbs:an11.7": "O venerável Ānanda questiona o Buda sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. Ambos o Buda e o venerável Sāriputta confirmam a existência de tal estado meditativo.",
+  "an-blurbs:an11.8": "O venerável Ānanda questiona o Buda sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. O Buda confirma a existência de tal estado meditativo."
 }
