--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1201,5 +1201,6 @@
   "an-blurbs:an11.6": "Onze resultados negativos a serem esperados por um bhikkhu que ofende e insulta seus companheiros espirituais. ",
   "an-blurbs:an11.7": "O venerável Ānanda questiona o Buda sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. Ambos o Buda e o venerável Sāriputta confirmam a existência de tal estado meditativo.",
   "an-blurbs:an11.8": "O venerável Ānanda questiona o Buda sobre um estado de imersão meditativa no qual, apesar de os quatro elementos e as cinco dimensões de absorção meditativa não serem percebidos, um bhikkhu ainda permanece perceptivo. O Buda confirma a existência de tal estado meditativo.",
-  "an-blurbs:an11.9": "O Buda exorta o venerável Sandha a meditar como um cavalo puro-sangue, não como um potro selvagem."
+  "an-blurbs:an11.9": "O Buda exorta o venerável Sandha a meditar como um cavalo puro-sangue, não como um potro selvagem.",
+  "an-blurbs:an11.10": "Onze qualidades presentes naqueles que alcançaram o objetivo final, o santuário supremo, e viveram a vida espiritual completamente."
 }
