--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1204,5 +1204,6 @@
   "an-blurbs:an11.9": "O Buda exorta o venerável Sandha a meditar como um cavalo puro-sangue, não como um potro selvagem.",
   "an-blurbs:an11.10": "Onze qualidades presentes naqueles que alcançaram o objetivo final, o santuário supremo, e viveram a vida espiritual completamente.",
   "an-blurbs:an11.11": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi.",
-  "an-blurbs:an11.12": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi."
+  "an-blurbs:an11.12": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi.",
+  "an-blurbs:an11.13": "O Buda ensina Nandiya, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi."
 }
