--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1206,5 +1206,6 @@
   "an-blurbs:an11.11": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi.",
   "an-blurbs:an11.12": "O Buda ensina Mahānāma, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi.",
   "an-blurbs:an11.13": "O Buda ensina Nandiya, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi.",
-  "an-blurbs:an11.14": "Onze resultados ou desdobramentos da fé e convicção no Buda e seu ensinamento e disciplina."
+  "an-blurbs:an11.14": "Onze resultados ou desdobramentos da fé e convicção no Buda e seu ensinamento e disciplina.",
+  "an-blurbs:an11.15": "Onze benefícios a serem esperados por aqueles que praticam, desenvolvem e se estabelecem na prática do bem querer."
 }
