--- a/translation/pt/blurb/an-blurbs_translation-pt.json
+++ b/translation/pt/blurb/an-blurbs_translation-pt.json
@@ -1208,5 +1208,6 @@
   "an-blurbs:an11.13": "O Buda ensina Nandiya, o Sákya, sobre qualidades que servem de base para o cultivo e desenvolvimento de outras seis reflexões que conduzem à felicidade e imersão da mente em samādhi.",
   "an-blurbs:an11.14": "Onze resultados ou desdobramentos da fé e convicção no Buda e seu ensinamento e disciplina.",
   "an-blurbs:an11.15": "Onze benefícios a serem esperados por aqueles que praticam, desenvolvem e se estabelecem na prática do bem querer.",
-  "an-blurbs:an11.16": "Quando solicitado por um chefe de família a ensinar um caminho para a liberdade, Venerável Ananda explica nada menos que onze estados meditativos que podem servir como portas para o imortal."
+  "an-blurbs:an11.16": "Quando solicitado por um chefe de família a ensinar um caminho para a liberdade, Venerável Ananda explica nada menos que onze estados meditativos que podem servir como portas para o imortal.",
+  "an-blurbs:an11.17": "Por onze razões, um vaqueiro é capaz de cuidar adequadamente de um rebanho. O Buda compara isso ao progresso espiritual de um discípulo mendicante."
 }
