--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.124:0.1": "Verbundene Lehrreden 35.124 ",
   "sn35.124:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.124:0.3": "In Vesālī ",
-  "sn35.124:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. "
+  "sn35.124:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
+  "sn35.124:1.2": "Da ging der Hausbesitzer Ugga von Vesālī zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: "
 }
