--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.124:0.3": "In Vesālī ",
   "sn35.124:1.1": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
   "sn35.124:1.2": "Da ging der Hausbesitzer Ugga von Vesālī zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "sn35.124:1.3": "„Was ist der Grund, Herr, was ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen? "
+  "sn35.124:1.3": "„Was ist der Grund, Herr, was ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen? ",
+  "sn35.124:1.4": "Was ist der Grund, was ist die Ursache, dass manche Lebewesen in diesem Leben vollkommen erlöschen?“ "
 }
