--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.130:1.6": "„Hausbesitzer, da sieht ein Mönch mit dem Auge ein Bild und versteht: ‚Es ist angenehm.‘ Augenbewusstsein ist da, ",
   "sn35.130:1.7": "und es entsteht ein angenehmes Gefühl in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. ",
   "sn35.130:1.8": "Dann sieht er mit dem Auge ein Bild und versteht: ‚Es ist schmerzhaft.‘ Augenbewusstsein ist da, ",
-  "sn35.130:1.9": "und es entsteht ein schmerzhaftes Gefühl in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. "
+  "sn35.130:1.9": "und es entsteht ein schmerzhaftes Gefühl in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. ",
+  "sn35.130:1.10": "Dann sieht er mit dem Auge ein Bild und versteht: ‚Es stellt eine Grundlage für Gleichmut dar.‘ Augenbewusstsein ist da, "
 }
