--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.130:1.10": "Dann sieht er mit dem Auge ein Bild und versteht: ‚Es stellt eine Grundlage für Gleichmut dar.‘ Augenbewusstsein ist da, ",
   "sn35.130:1.11": "und es entsteht ein neutrales Gefühl in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. ",
   "sn35.130:2.1": "Da hört weiter eine Nonne mit dem Ohr einen Ton … ",
-  "sn35.130:2.2": "riecht mit der Nase einen Duft … "
+  "sn35.130:2.2": "riecht mit der Nase einen Duft … ",
+  "sn35.130:2.3": "schmeckt mit der Zunge einen Geschmack … "
 }
