--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.130:2.4": "empfindet mit dem Körper eine Berührung … ",
   "sn35.130:2.5": "erkennt mit dem Geist einen Gedanken und versteht: ‚Er ist angenehm.‘ Geistbewusstsein ist da, ",
   "sn35.130:2.6": "und es entsteht ein angenehmes Gefühl in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. ",
-  "sn35.130:2.7": "Dann erkennt sie mit dem Geist einen Gedanken und versteht: ‚Er ist schmerzhaft.‘ Geistbewusstsein ist da, "
+  "sn35.130:2.7": "Dann erkennt sie mit dem Geist einen Gedanken und versteht: ‚Er ist schmerzhaft.‘ Geistbewusstsein ist da, ",
+  "sn35.130:2.8": "und es entsteht ein schmerzhaftes Gefühl in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. "
 }
