--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.130:2.7": "Dann erkennt sie mit dem Geist einen Gedanken und versteht: ‚Er ist schmerzhaft.‘ Geistbewusstsein ist da, ",
   "sn35.130:2.8": "und es entsteht ein schmerzhaftes Gefühl in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. ",
   "sn35.130:2.9": "Dann erkennt sie mit dem Geist einen Gedanken und versteht: ‚Er stellt eine Grundlage für Gleichmut dar.‘ Geistbewusstsein ist da, ",
-  "sn35.130:2.10": "und es entsteht ein neutrales Gefühl in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. "
+  "sn35.130:2.10": "und es entsteht ein neutrales Gefühl in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. ",
+  "sn35.130:2.11": "So führt die Vielfalt der Elemente zur Vielfalt der Berührungen und die Vielfalt der Berührungen zur Vielfalt der Gefühle.“ "
 }
