--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -732,5 +732,6 @@
   "dn16:3.48.4": "Blaženi je odustao, odrekao se, odvratio, okrenuo od i napustio životni tok. Zaista je on rekao:",
   "dn16:3.48.5": "’Nema još mnogo do Tathāgatinog konačno oslobođenja.",
   "dn16:3.48.6": "Za tri meseca, računajući od sada, Tathāgata će ući u parinibbānu.’",
-  "dn16:3.48.7": "Da mu se on života radi ponovo vrati, to nije moguće. "
+  "dn16:3.48.7": "Da mu se on života radi ponovo vrati, to nije moguće. ",
+  "dn16:3.48.8": "A sada, Ānanda, hajdemo do Velike šume, do paviljona sa šiljastim krovom."
 }
