--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -742,5 +742,6 @@
   "dn16:3.50.1": "Tako Blaženi otide do velike dvorane i sede na unapred pripremljeno mesto. ",
   "dn16:3.50.2": "A onda reče monasima:",
   "dn16:3.50.3": "„Monasi, pošto ste dobro savladali učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio, treba da ga se držite, negujete, često praktikujete, tako da ovaj svetački život opstane što duže. To će biti na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića.",
-  "dn16:3.50.4": "A kakvo je to učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio?"
+  "dn16:3.50.4": "A kakvo je to učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio?",
+  "dn16:3.50.5": "To su četiri temelja svesnosti, četiri prave vrste nastojanja, četiri osnove duhovne moći, pet sposobnosti, pet snaga, sedam elemenata probuđenja, plemeniti osmostruki put."
 }
