--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -747,5 +747,6 @@
   "dn16:3.51.1": "To je, monasi, to učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio. To je učenje kojeg treba da se držite, negujete, često praktikujete, tako da ovaj svetački život opstane što duže, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića.”",
   "dn16:3.51.2": "Dalje Blaženi reče monasima:",
   "dn16:3.51.3": "„Monasi, sada vam i ovo kažem:",
-  "dn16:3.51.4": "priroda svih uslovljenih stvari zaista jeste da propadaju. Naoružani svesnošću, vežbajte neumorno da stignete do cilja!"
+  "dn16:3.51.4": "priroda svih uslovljenih stvari zaista jeste da propadaju. Naoružani svesnošću, vežbajte neumorno da stignete do cilja!",
+  "dn16:3.51.5": "Nema još mnogo do Tathāgatinog konačno oslobođenja."
 }
