--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -749,5 +749,6 @@
   "dn16:3.51.3": "„Monasi, sada vam i ovo kažem:",
   "dn16:3.51.4": "priroda svih uslovljenih stvari zaista jeste da propadaju. Naoružani svesnošću, vežbajte neumorno da stignete do cilja!",
   "dn16:3.51.5": "Nema još mnogo do Tathāgatinog konačno oslobođenja.",
-  "dn16:3.51.6": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”"
+  "dn16:3.51.6": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”",
+  "dn16:3.51.7": "Tako reče Blaženi."
 }
