--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -751,5 +751,6 @@
   "dn16:3.51.5": "Nema još mnogo do Tathāgatinog konačno oslobođenja.",
   "dn16:3.51.6": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”",
   "dn16:3.51.7": "Tako reče Blaženi.",
-  "dn16:3.51.8": "A zatim i ovo dodade učitelj:"
+  "dn16:3.51.8": "A zatim i ovo dodade učitelj:",
+  "dn16:3.51.9": "Došao je trenutak,"
 }
