--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -755,5 +755,6 @@
   "dn16:3.51.9": "„Došao je trenutak,",
   "dn16:3.51.10": "sasvim malo života mi još ostade.",
   "dn16:3.51.11": "Napustivši vas, odlazim,",
-  "dn16:3.51.12": "jer samoga sebe uzeh za utočište."
+  "dn16:3.51.12": "jer samoga sebe uzeh za utočište.",
+  "dn16:3.51.13": "Budite pažljivi i svesni,"
 }
