--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -757,5 +757,6 @@
   "dn16:3.51.11": "Napustivši vas, odlazim,",
   "dn16:3.51.12": "jer samoga sebe uzeh za utočište.",
   "dn16:3.51.13": "Budite pažljivi i svesni,",
-  "dn16:3.51.14": "negujte vrlinu, monasi moji."
+  "dn16:3.51.14": "negujte vrlinu, monasi moji.",
+  "dn16:3.51.15": "Dobro odmerenim mislima,"
 }
