--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -758,5 +758,6 @@
   "dn16:3.51.12": "jer samoga sebe uzeh za utočište.",
   "dn16:3.51.13": "Budite pažljivi i svesni,",
   "dn16:3.51.14": "negujte vrlinu, monasi moji.",
-  "dn16:3.51.15": "Dobro odmerenim mislima,"
+  "dn16:3.51.15": "Dobro odmerenim mislima,",
+  "dn16:3.51.16": "zaštitite sopstveni um."
 }
