--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -759,5 +759,6 @@
   "dn16:3.51.13": "Budite pažljivi i svesni,",
   "dn16:3.51.14": "negujte vrlinu, monasi moji.",
   "dn16:3.51.15": "Dobro odmerenim mislima,",
-  "dn16:3.51.16": "zaštitite sopstveni um."
+  "dn16:3.51.16": "zaštitite sopstveni um.",
+  "dn16:3.51.17": "Ko u ovom učenju i praksi"
 }
