--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -763,5 +763,6 @@
   "dn16:3.51.17": "Ko u ovom učenju i praksi",
   "dn16:3.51.18": "zaista marljiv živi,",
   "dn16:3.51.19": "napustivši krug preporađanja,",
-  "dn16:3.51.20": "taj će na kraj patnje stići."
+  "dn16:3.51.20": "taj će na kraj patnje stići.",
+  "dn16:4.1.1": "A ujutru se Blaženi obuče, uze svoju prosjačku zdelu i gornji ogrtač, pa krenu put Vesālija da prosi hranu."
 }
